SERVER-8433 prohibit constructing FieldPaths that exceed the depth limit

(cherry picked from commit ba8c4a2cb599861bcd92446926b72bb17eb5df6b)

Conflicts:
	src/mongo/db/pipeline/document_source_add_fields_test.cpp
	src/mongo/db/pipeline/document_source_project_test.cpp
	src/mongo/db/pipeline/field_path_test.cpp